--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
   },
   "scripts": {
     "test": "grunt test"
+  },
+  "dependencies": {
+    "grunt": "0.4.5",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-uglify": "0.7.0",
+    "gzippo": "^0.2.0"
   }
 }
