--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "express": "^4.13.4",
     "grunt": "0.4.5",
     "grunt-cli": "1.2.0",
     "grunt-contrib-uglify": "0.7.0",
