--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt": "0.4.5",
     "grunt-cli": "1.2.0",
     "grunt-contrib-uglify": "0.7.0",
-    "gzippo": "^0.2.0"
+    "gzippo": "^0.2.0",
+    "morgan": "^1.7.0"
   }
 }
